import org.jetbrains.intellij.platform.gradle.tasks.RunIdeTask
import org.jetbrains.intellij.platform.gradle.tasks.VerifyPluginTask

plugins {
	id("java")
	id("org.jetbrains.intellij.platform") version "2.16.0"
}

group = "biz.paluch"
version = "0.5.0-RC1"

repositories {
	mavenCentral()
	intellijPlatform {
		defaultRepositories()
	}
}

// Read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin.html
dependencies {
	intellijPlatform {
		intellijIdea("2026.1.3")
		testFramework(org.jetbrains.intellij.platform.gradle.TestFrameworkType.Platform)
		testFramework(org.jetbrains.intellij.platform.gradle.TestFrameworkType.JUnit5)
		bundledPlugin("org.jetbrains.idea.maven")
		bundledPlugin("org.jetbrains.plugins.gradle")
		bundledPlugin("com.intellij.gradle")
		bundledPlugin("org.intellij.groovy")
		bundledPlugin("org.jetbrains.kotlin")
		bundledPlugin("org.toml.lang")
		bundledPlugin("org.jetbrains.plugins.yaml")
		bundledModule("intellij.yaml.backend")
		bundledPlugin("org.jetbrains.plugins.github")
		bundledPlugin("Git4Idea")
		bundledPlugin("com.intellij.modules.json")
		bundledPlugin("org.jetbrains.security.package-checker")
	}

	implementation("org.springframework:spring-core:7.0.7")
	implementation("org.xmlbeam:xmlprojector:1.4.26")
	compileOnly("org.jspecify:jspecify:1.0.0")

	testImplementation("org.assertj:assertj-core:3.27.7")
	testImplementation("org.junit.jupiter:junit-jupiter:6.1.0")
	testImplementation("org.wiremock:wiremock-standalone:3.13.1")

	// https://youtrack.jetbrains.com/issue/IJPL-159134/JUnit5-Test-Framework-refers-to-JUnit4-java.lang.NoClassDefFoundError-junit-framework-TestCase
	testImplementation("junit:junit:4.13.2")

	testImplementation("com.tngtech.archunit:archunit-junit5-api:1.4.2")

	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
	testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine:1.4.2")
}

intellijPlatform {
	pluginConfiguration {
		ideaVersion {
			sinceBuild = "261"
		}

		name = "Dependency Assistant"

		changeNotes = """
            Initial version
        """.trimIndent()
	}

	pluginVerification {

		// fail only on hard compatibility problems, ignore warnings/experimental
		failureLevel = listOf(
			VerifyPluginTask.FailureLevel.COMPATIBILITY_PROBLEMS,
			VerifyPluginTask.FailureLevel.SCHEDULED_FOR_REMOVAL_API_USAGES,
			VerifyPluginTask.FailureLevel.OVERRIDE_ONLY_API_USAGES,
			VerifyPluginTask.FailureLevel.NON_EXTENDABLE_API_USAGES,
			VerifyPluginTask.FailureLevel.PLUGIN_STRUCTURE_WARNINGS,
			VerifyPluginTask.FailureLevel.MISSING_DEPENDENCIES,
			VerifyPluginTask.FailureLevel.INVALID_PLUGIN,
		)

		ides {
			recommended()
		}
	}
}

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(21))
	}
}

tasks {
	withType<Test>().configureEach {
		useJUnitPlatform()
		failOnNoDiscoveredTests = true
	}

	withType<RunIdeTask>().configureEach {
		systemProperty("idea.log.debug.categories", "biz.paluch.dap")
	}
}
